compiler/typ/tests/fixtures/diagnostics/0274_fun_recursive_self_application_04.ml
let rec bad_delta x = x x
